# Langchain-benjamin

./: .mcp.json  BIOAGENTS_INSPIRATION.md  CLAUDE.md  MCP_INTEGRATION.md  QUICKSTART.md  README.md  TEST_SUITE_AUDIT.md  findings.md  progress.md  task_plan.md  untitled.pen
langgraph-app/: .dockerignore  .env.docker.example  .env.example  .env.production.example  DEPLOYMENT.md  Dockerfile  Makefile  README.md  dev.sh  docker-compose.yml  langgraph.json  pyproject.toml
langgraph-app/.serena/: project.yml
langgraph-app/.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_guidelines.md
langgraph-app/migrations/: 003_guidelines_schema.sql
langgraph-app/scripts/: ingest_guidelines.py
langgraph-app/src/agent/: constants.py  graph.py
langgraph-app/src/agent/mcp/: __init__.py  config.py
langgraph-app/src/agent/models/: __init__.py  drug_models.py  guideline_models.py  research_models.py  supervisor_models.py
langgraph-app/src/agent/nodes/: __init__.py  drug_agent.py  general_agent.py  guidelines_agent.py  pubmed_agent.py  supervisor.py  supervisor_prompts.py  synthesizer.py  translation.py
langgraph-app/src/agent/utils/: __init__.py  guidelines_storage.py  (+5 more)
langgraph-app/src/api/: README.md  __init__.py  cache.py  config.py  dependencies.py  logging_config.py  main.py  routes.py  schemas.py
langgraph-app/tests/: conftest.py
langgraph-app/tests/integration_tests/: test_api_server.py  test_drug_agent_flow.py  test_graph_foundation.py  test_guidelines_agent_flow.py  test_guidelines_storage_integration.py  test_parallel_execution.py  test_pubmed_agent_flow.py  test_supervisor_flow.py  test_synthesizer_flow.py
langgraph-app/tests/load_tests/: benchmark.sh  locustfile.py
langgraph-app/tests/performance/: test_pubmed_latency.py
langgraph-app/tests/quality/: translation_quality_checklist.md
langgraph-app/tests/unit_tests/: test_configuration.py  test_foundation.py  test_routing.py
(+173 files in other folders)
